--- a/Proiect/Login.html
+++ b/Proiect/Login.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <div class="login">
         <form action="map.html">
             <img src="images/loginLogo.png">
                 <div class="loginArea"> 
@@ -17,5 +18,6 @@
                     <span id="password">Forgot <a href="ForgotPassword.html">password?</a></span>
                 </div>
         </form>
+        </div>
     </body>
 </html>
