--- a/Proiect/ForgotPassword.html
+++ b/Proiect/ForgotPassword.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Forgot Password </title>
-        <link rel="stylesheet" href="ForgotPassword.css">
+        <link rel="stylesheet" href="./style/ForgotPassword/ForgotPassword.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
