--- a/Proiect/Login.html
+++ b/Proiect/Login.html
@@ -2,9 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Login </title>
-        <link rel="stylesheet" href="Login.css">
+        <title> Login </title> jm
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+       <link rel="stylesheet" href="./style/Login/Login.css">
+
+        <!--<link rel="stylesheet" media="(max-width:710px)" href="./style/Login/LoginMin710.css">
+       -->
+        <link rel="stylesheet" media="(max-width:830px)" href="./style/Login/LoginMax830.css">    
+        <link rel="stylesheet" media="(max-width:770px)" href="./style/Login/LoginMax770.css">      
+        <link rel="stylesheet" media="(max-width:450px)" href="./style/Login/LoginMax450.css">     
+        <link rel="stylesheet" media="(max-width:420px)" href="./style/Login/LoginMax420.css">    
+        <link rel="stylesheet" media="(max-width:380px)" href="./style/Login/LoginMax380.css">
+
     </head>
 
     <body>
