--- a/Proiect/SignUp.html
+++ b/Proiect/SignUp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Sign Up </title>
-        <link rel="stylesheet" href="SignUp.css">
+        <link rel="stylesheet" href="./style/SignUp/SignUp.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
