--- a/Proiect/SignUp.html
+++ b/Proiect/SignUp.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title> Sign Up </title>
-        <link rel="stylesheet" href="./style/SignUp/SignUp.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="./style/SignUp/SignUp.css">
+        <link rel="stylesheet" media="(max-width:1030px)" href="./style/SignUp/SignUpMax1030.css">
+        <link rel="stylesheet" media="(max-width:830px)" href="./style/SignUp/SignUpMax830.css">
+        <link rel="stylesheet" media="(max-width:770px)" href="./style/SignUp/SignUpMax770.css">      
+        <link rel="stylesheet" media="(max-width:740px)" href="./style/SignUp/SignUpMax740.css">  
+        <link rel="stylesheet" media="(max-width:420px)" href="./style/SignUp/SignUpMax420.css">    
+        <link rel="stylesheet" media="(max-width:380px)" href="./style/SignUp/SignUpMax380.css">
 
     </head>
 
