--- a/Proiect/ForgotPassword.html
+++ b/Proiect/ForgotPassword.html
@@ -2,9 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Forgot Password </title>
-        <link rel="stylesheet" href="./style/ForgotPassword/ForgotPassword.css">
+        <title> Forgot Password </title>        
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="./style/ForgotPassword/ForgotPassword.css">
+        <link rel="stylesheet" media="(max-width:1300px)" href="./style/ForgotPassword/ForgotPasswordMax1300.css">
+        <link rel="stylesheet" media="(max-width:830px)" href="./style/ForgotPassword/ForgotPasswordMax830.css">
+        <link rel="stylesheet" media="(max-width:770px)" href="./style/ForgotPassword/ForgotPasswordMax770.css">
+        <link rel="stylesheet" media="(max-width:740px)" href="./style/ForgotPassword/ForgotPasswordMax740.css">
+        <link rel="stylesheet" media="(max-width:420px)" href="./style/ForgotPassword/ForgotPasswordMax420.css">
+        <link rel="stylesheet" media="(max-width:380px)" href="./style/ForgotPassword/ForgotPasswordMax380.css">
+
     </head>
 
     <body>
@@ -12,10 +20,12 @@
             <h2> Forgot Password? </h2>
             <p id="firstParagraph"> You can reset your password here. </p>
 
-            <form action="Login.html">
-                 Phone Number <input type="tel" placeholder="enter phone number" name="phone" required>
-                <button type="submit" ><strong> Send a new Password </strong></button></a>
-            </form>
+            <div class="space">
+                <form action="Login.html">
+                    Phone Number <input type="tel" placeholder="enter phone number" name="phone" required>
+                    <button type="submit" ><strong> Send a new Password </strong></button></a>
+                </form>
+            </div>
         </div>
     </body>
 </html>
