--- a/Proiect/addSenzor.html
+++ b/Proiect/addSenzor.html
@@ -19,7 +19,7 @@
             <div class="pages">
                 <a href="map.html">Harta</a>
                 <a href="addSenzor.html"> Adaugare senzor</a>
-                <a>Modificare senzor</a>
+                <a href="ModificareSenzor.html">Modificare senzor</a>
                 <a>Actualizare profil</a>
                 <a>Logout</a>
             </div>
@@ -34,7 +34,7 @@
                     <ul>
                         <li><a href="map.html">Harta</a></li>
                         <li><a href="addSenzor.html">Adaugare senzor</a></li>
-                        <li><a>Modificare senzor</a></li>
+                        <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
                         <li><a>Actualizare profil</a></li>
                         <li><a>Logout</a></li>
                     </ul>
