--- a/Proiect/ModificareSenzor.html
+++ b/Proiect/ModificareSenzor.html
@@ -22,7 +22,7 @@
                 <a href="addSenzor.html"> Adaugare senzor </a>
                 <a href="ModificareSenzor.html"> Modificare senzor </a>
                 <a>Actualizare profil</a>
-                <a>Logout</a>
+                <a href="index.html">Logout</a>
             </div>
         </div>
 
@@ -38,7 +38,7 @@
                         <li><a href="addSenzor.html">Adaugare senzor</a></li>
                         <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
                         <li><a>Actualizare profil</a></li>
-                        <li><a>Logout</a></li>
+                        <li><a href="index.html">Logout</a></li>
                     </ul>
                 </div>
             </div>
