--- a/Proiect/addSenzor.html
+++ b/Proiect/addSenzor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="./style/addSenzor/senzor.css">
         <link rel="stylesheet" media="(min-width:1400px)" href="./style/addSenzor/respLarge-senzor.css">
         <link rel="stylesheet" media="(max-width:1050px)" href="./style/addSenzor/respMedium-senzor.css">
@@ -9,26 +10,35 @@
         <link rel="stylesheet" media="(max-width:650px)" href="./style/addSenzor/respMedium4-senzor.css">
         <link rel="stylesheet" media="(max-width:450px)" href="./style/addSenzor/respSmall-senzor.css">
         <link rel="stylesheet" media="(max-width:361px)" href="./style/addSenzor/respSmall2-senzor.css">
-
+        <title>Adaugare Senzor</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
-            <img class="header-logo" src="./images/pageLogo.png">
+            <img class="header-logo" src="./images/pageLogo.png" alt="Logo">
             <div class="pages">
                 <a href="map.html">Harta</a>
                 <a href="addSenzor.html"> Adaugare senzor</a>
                 <a href="ModificareSenzor.html">Modificare senzor</a>
                 <a>Actualizare profil</a>
-                <a href="index.html">Logout</a>
+                <a>Logout</a>
+            </div>
+            <div class="notification">
+                    <input type="checkbox" id="notificationList">
+                    <label for="notificationList" class="notifications"><img src="./images/notification_bell.png" alt="Clopotel"></label>
+                    <div class="notifi">
+                        <ul>
+                            <li>Nu sunt notificari noi!</li>
+                        </ul>
+                    </div>
             </div>
         </div>
         <div class="headerSmaller">
-            <img class="header-logoMobile" src="./images/pageLogo.png">
+            <img class="header-logoMobile" src="./images/pageLogo.png" alt="Logo">
             <div class="collapsible-menu">
                 <input type="checkbox" id="menuToggler"/>
-                <label for="menuToggler" class="Menu">Menu</label>
+                <label for="menuToggler" class="Menu"><img src="./images/menu.png" alt="Hamburger">Menu</label>
            
                 <div class="pagesMobile">
                     <ul>
@@ -36,10 +46,19 @@
                         <li><a href="addSenzor.html">Adaugare senzor</a></li>
                         <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
                         <li><a>Actualizare profil</a></li>
-                        <li><a href="index.html">Logout</a></li>
+                        <li><a>Logout</a></li>
                     </ul>
                 </div>
             </div>
+            <div class="notificationSmall">
+                    <input type="checkbox" id="notificationListSmall">
+                    <label for="notificationListSmall" class="notificationsSmall"><img src="./images/notification_bell.png" alt="Clopotel"></label>
+                    <div class="notifiSmall">
+                        <ul>
+                            <li>Nu sunt notificari noi!</li>
+                        </ul>
+                    </div>
+                </div>
         </div>
         <div class="addSensor">
             <h2>Adauga senzorul pentru copilul tau!</h2>
