--- a/Proiect/ModificareSenzor.html
+++ b/Proiect/ModificareSenzor.html
@@ -21,7 +21,7 @@
                 <a href="map.html"> Harta </a>
                 <a href="addSenzor.html"> Adaugare senzor </a>
                 <a href="ModificareSenzor.html"> Modificare senzor </a>
-                <a>Actualizare profil</a>
+                <a href="ActualizareProfil.html">Actualizare profil</a>
                 <a href="index.html">Logout</a>
             </div>
         </div>
@@ -37,7 +37,7 @@
                         <li><a href="map.html">Harta</a></li>
                         <li><a href="addSenzor.html">Adaugare senzor</a></li>
                         <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
-                        <li><a>Actualizare profil</a></li>
+                        <li><a href="ActualizareProfil.html">Actualizare profil</a></li>
                         <li><a href="index.html">Logout</a></li>
                     </ul>
                 </div>
