--- a/Proiect/addSenzor.html
+++ b/Proiect/addSenzor.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title> Adaugare Copil </title>
         <link rel="stylesheet" href="./style/addSenzor/senzor.css">
         <link rel="stylesheet" media="(min-width:1400px)" href="./style/addSenzor/respLarge-senzor.css">
         <link rel="stylesheet" media="(max-width:1050px)" href="./style/addSenzor/respMedium-senzor.css">
