--- a/Proiect/map.html
+++ b/Proiect/map.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title> Harta </title>
         <link rel="stylesheet" href="./style/map/map.css">
         <link rel="stylesheet" media="(min-width:1400px)" href="./style/map/respLarge-map.css">
         <link rel="stylesheet" media="(max-width:1050px)" href="./style/map/respMedium-map.css">
