--- a/Proiect/ForgotPassword.html
+++ b/Proiect/ForgotPassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title> Forgot Password </title>        
@@ -23,7 +23,7 @@
             <div class="space">
                 <form action="Login.html">
                     Phone Number <input type="tel" placeholder="enter phone number" name="phone" required>
-                    <button type="submit" ><strong> Send a new Password </strong></button></a>
+                    <button type="submit" ><strong> Send a new Password </strong></button>
                 </form>
             </div>
         </div>
