--- a/Proiect/Login.html
+++ b/Proiect/Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title> Login </title>
@@ -19,11 +19,11 @@
     <body>
         <div class="login">
         <form action="map.html">
-            <img src="images/loginLogo.png">
+            <img src="images/loginLogo.png" alt="Smiley face">
                 <div class="loginArea"> 
                     <input type="email" placeholder="Email Address" name="email" required>
                     <input type="password" placeholder="Password" name="password" required>
-                    <button type="submit" ><strong> Login </strong></button></a>
+                    <button type="submit" ><strong> Login </strong></button>
                     <span id="password">Forgot <a href="ForgotPassword.html">password?</a></span>
                 </div>
         </form>
