--- a/Proiect/ModificareSenzor.html
+++ b/Proiect/ModificareSenzor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title> Sensor Modification </title>
@@ -16,7 +16,7 @@
         
     <body>
         <div class="header">
-            <img class="header-logo" src="./images/pageLogo.png">
+            <img class="header-logo" src="./images/pageLogo.png" alt="Smiley face">
             <div class="pages">
                 <a href="map.html"> Harta </a>
                 <a href="addSenzor.html"> Adaugare senzor </a>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="headerSmaller">
-            <img class="header-logoMobile" src="./images/pageLogo.png">
+            <img class="header-logoMobile" src="./images/pageLogo.png" alt="Smiley face">
             <div class="collapsible-menu">
                 <input type="checkbox" id="menuToggler"/>
                 <label for="menuToggler" class="Menu">Menu</label>
@@ -56,8 +56,7 @@
                     <p>Adresa de monitorizare 2</p>
                         <input type="text" placeholder="Introduceti cea de-a doua adresa" name="adress" >
                     <button type="submit"><strong> Submit </strong></button>
-                    </form>
-            </div>
+                </form>
         </div>
 
         <div class="footer">
