--- a/Proiect/SignUp.html
+++ b/Proiect/SignUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title> Sign Up </title>
@@ -35,7 +35,7 @@
                 <p> Phone Number </p>
                     <input type="tel" placeholder="enter phone number" name="phone" required>
                 <button type="submit"><strong> Submit </strong></button>    
-            </from>
+            </form>
         </div>
     </body>
 </html>
