--- a/Proiect/addSenzor.html
+++ b/Proiect/addSenzor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
         <meta charset="utf-8">
         <title> Adaugare Copil </title>
@@ -45,7 +45,7 @@
         </div>
         <div class="addSensor">
             <h2>Adauga senzorul pentru copilul tau!</h2>
-            <form>
+            <form action="map.html">
                 <p>Nume copil</p>
                     <input type="text" placeholder="Introduceti numele" name="childName" required>
                 <p>Distanta minima da indepartare</p>
