--- a/Proiect/index.html
+++ b/Proiect/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./style/index/index.css">
