--- a/Proiect/addSenzor.html
+++ b/Proiect/addSenzor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title> Adaugare Copil </title>
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="header">
-            <img class="header-logo" src="./images/pageLogo.png">
+            <img class="header-logo" src="./images/pageLogo.png" alt="Logo">
             <div class="pages">
                 <a href="map.html">Harta</a>
                 <a href="addSenzor.html"> Adaugare senzor</a>
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="headerSmaller">
-            <img class="header-logoMobile" src="./images/pageLogo.png">
+            <img class="header-logoMobile" src="./images/pageLogo.png" alt="Logo">
             <div class="collapsible-menu">
                 <input type="checkbox" id="menuToggler"/>
                 <label for="menuToggler" class="Menu">Menu</label>
